Fixed spacing between cards

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -38,17 +38,15 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding: 32px;
-  /* justify-content: space-around; */
-  gap: 32px;
+  gap: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  width: 300px;
-  padding: 32px;
-  flex: initial;
+  padding: 16px;
+  flex: 0 0 300px;
 }
 
 .main {
